--- a/HTML/source/scss/theme-default/_fonts.scss
+++ b/HTML/source/scss/theme-default/_fonts.scss
@@ -8,7 +8,7 @@
         url('../fonts/Proxima-SemiBold_gdi.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Proxima-SemiBold_gdi.woff') format('woff'),
         url('../fonts/Proxima-SemiBold_gdi.ttf') format('truetype');
-    font-weight: bold;
+    font-weight: 600;
     font-style: normal;
 }
 
@@ -20,6 +20,17 @@
         url('../fonts/Proxima_gdi.woff') format('woff'),
         url('../fonts/Proxima_gdi.ttf') format('truetype');
     font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Proxima';
+    src: url('../fonts/Proxima-Bold.eot');
+    src: local('☺'),
+        url('../fonts/Proxima-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Proxima-Bold.woff') format('woff'),
+        url('../fonts/Proxima-Bold.ttf') format('truetype');
+    font-weight: bold;
     font-style: normal;
 }
 
