--- a/HTML/source/scss/theme-default/_footer.scss
+++ b/HTML/source/scss/theme-default/_footer.scss
@@ -13,6 +13,10 @@
         &:hover {
             opacity: 0.8;
         }
+        @include breakpoint(xs){
+            max-width: 120px;
+            right: 10px;
+        }
     }
     &__info {
         margin-top: 30px;
