--- a/HTML/source/scss/theme-default/_region.scss
+++ b/HTML/source/scss/theme-default/_region.scss
@@ -1,16 +1,22 @@
 .site-content {
     .container {
         position: relative;
+        @include breakpoint(xs) {
+            padding-top: 20px;
+            margin-top: 10px;
+        }
     }
     &__header {
         position: absolute;
         top: 0;
-        right: 10px;
         transform: translate( 0, -100%);
         font-size: 28px;
         color: $brand-info;
         text-transform: uppercase;
         font-weight: bold;
+        @include breakpoint(sm) {
+            right: 10px;
+        }
     }
     &__list {
         margin-bottom: 20px;
@@ -21,22 +27,33 @@
 .list {
     &__header {
         @include clearfix;
+        display: table;
+        width: 100%;
+        position: relative;
+        margin-bottom: 10px;
+    }
+    &__order,
+    &__title {
+        display: table-cell;
+        vertical-align: middle;
     }
     &__order {
         font-weight: bold;
         font-size: 72px;
         color: #eee;
-        float: left;
     }
     &__title {
-        text-align: center;
-        font-size: 18px;
+        font-size: 22px;
+        line-height: 1.3em;
         color: $brand-info;
         text-transform: uppercase;
         font-weight: bold;
         overflow: hidden;
-        line-height: 102px;
         a {
+            // display: inline-block;
+            position: absolute;
+            left: 50%;
+            transform: translate(-50%, -50%);
             color: $brand-info;
             &:hover {
                 color: $brand-primary;
@@ -48,7 +65,7 @@
 .item {
     text-align: center;
     @include breakpoint(xs) {
-        margin-bottom: 20px;
+        margin-bottom: 30px;
     }
     &__icon {
         width: 60px;
@@ -58,14 +75,17 @@
         margin: 0 auto 30px;
         border: 2px solid $brand-info;
         color: $brand-info;
+        @include breakpoint(xs) {
+            margin-bottom: 15px;
+        }
     }
     &__title {
-        font-size: 16px;
+        font-size: 18px;
         font-weight: bold;
         margin-bottom: 15px;
     }
     &__desc {
+        font-size: 16px;
         color: #333;
-        font-size: 14px;
     }
 }
