--- a/HTML/source/scss/theme-default/_region.scss
+++ b/HTML/source/scss/theme-default/_region.scss
@@ -2,8 +2,8 @@
     .container {
         position: relative;
         @include breakpoint(xs) {
-            padding-top: 20px;
-            margin-top: 10px;
+            padding-top: 40px;
+            margin-top: 20px;
         }
     }
     &__header {
@@ -31,6 +31,9 @@
         width: 100%;
         position: relative;
         margin-bottom: 10px;
+        @include breakpoint(xs){
+            margin-bottom: 30px;
+        }
     }
     &__order,
     &__title {
@@ -65,7 +68,7 @@
 .item {
     text-align: center;
     @include breakpoint(xs) {
-        margin-bottom: 30px;
+        margin-bottom: 50px;
     }
     &__icon {
         width: 60px;
@@ -76,13 +79,16 @@
         border: 2px solid $brand-info;
         color: $brand-info;
         @include breakpoint(xs) {
-            margin-bottom: 15px;
+            // margin-bottom: 15px;
         }
     }
     &__title {
         font-size: 18px;
         font-weight: bold;
         margin-bottom: 15px;
+         @include breakpoint(xs) {
+
+         }
     }
     &__desc {
         font-size: 16px;
