--- a/HTML/source/scss/theme-default/_header.scss
+++ b/HTML/source/scss/theme-default/_header.scss
@@ -31,9 +31,25 @@
     }
     &__cover {
         padding: 20px 0;
+        position: relative;
         @include clearfix;
         @include breakpoint(xs) {
             padding-bottom: 0;
+        }
+        .cover-text {
+            font-size: 30px;
+            text-align: center;
+            position: absolute;
+            top: 50%;
+            right: 0;
+            left: 0px;
+            color: white;
+            transform: translate(0%, -50%);
+            @include breakpoint(xs) {
+                font-size: 22px;
+                right: 20px;
+                left: 20px;
+            }
         }
     }
     a {
